--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,54 @@
-# Compiled class file
-*.class
+.gradle/
+build/
 
-# Log file
-*.log
+# Eclipse stuff
+.classpath
+.project
+.settings/
 
-# BlueJ files
-*.ctxt
+# VSCode stuff
+.vscode/
+.vs/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# netbeans
+nbproject/
+nbactions.xml
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# we use maven!
+build.xml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-.gradle/*
+# maven
+target/
+dependency-reduced-pom.xml
+
+# vim
+.*.sw[a-p]
+
+# various other potential build files
+build/
+bin/
+dist/
+manifest.mf
+
+# Mac filesystem dust
+.DS_Store/
+.DS_Store
+
+# intellij
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+
+# Linux temp files
+*~
+
+# other stuff
+run/
+
+atlanta-server
+atlanta-api
+
+*.sh
+atlanta.jar
