--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,4 +44,4 @@ jobs:
             - uses: actions/upload-artifact@v3
               with:
                 name: Atlanta Artifact
-                path: build/libs/*.jar
+                path: build/libs/Atlanta-paperclip-*-reobf.jar
