--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Update Upstream Commit Hash
         run: |
           chmod 777 gradlew
-          ./gradlew FoliaRefLatest --stacktrace
+          ./gradlew KaiijuRefLatest --stacktrace
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
